conditions.Conditions.scala.error
Compilation error:
Conditions:1: error: not found: value isFAcingWall
if (isFAcingWall() == true) {
    ^