conditions.Conditions.scala.code
if (isFAcingWall() == true) {
  forward();
} else {
  left()
  left()
  forward();
}